assets/scss/deepdwn/components/_typography.scss
kbd {
  // all: unset;
  padding: 0;
  background: none;
  margin: 0;
  white-space: nowrap;
}

kbd kbd {
  padding: 0.2rem 0.4rem;
  margin: 0;
  background-color: lighten($body-color-dark, 5%);
  color: $body-bg-dark;
  border: 1px solid rgb(163, 163, 163);
  font-weight: 400;
  @include dark() {
    border-color: #556475;
    background-color: #15191d;
    color: $body-color-dark;
  }
}

code {
  padding-top: 0.125rem;
  padding-bottom: 0.125rem;
  border: 1px solid $brown;
  @include dark() {
    border-color: lighten($body-bg-dark, 30%);
  }
}

pre code {
  border: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #e01364;

  @include dark() {
    color: #ff247a;
  }
}

